{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "dd1a4549-e659-41da-8612-80a0abfe834e",
            "actions": [
                {
                    "name": "Jab",
                    "type": "Button",
                    "id": "52ecffe9-a7df-430b-8884-4aae197286fd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Guard",
                    "type": "Button",
                    "id": "92473885-d058-4d6f-b14a-d30e534129a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightJab",
                    "type": "Button",
                    "id": "e309ef1e-f402-4e81-a0e3-fb0f2d21e447",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3165d3ad-e9d7-4d82-a97e-d70216bc672a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7834757-a84a-41a4-8ccc-ecbe245bcdc6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Guard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d73dbe8-5f9b-420a-87bf-0ac9065aaec4",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightJab",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}